# python-redux

./: .gitignore  CHANGELOG.md  CYTHON_README.md  README.md  demo.py  profile_optimization.py  pyproject.toml  pyproject_binary.toml  setup.py  setup_binary.py  setup_scm_schemes.py  todo_demo.py  version.py
.github/workflows/: integration_delivery.yml
benchmarks/: __init__.py  baseline.json  bench_autorun.py  bench_combine_reducers.py  bench_dispatch.py  debug_python.json  hyper_optimized.json  legacy_autorun.json  optimized.json  optimized_advanced.json  optimized_final.json
logs/: profile_subscribers.prof
redux/: __init__.py  _autorun_py.py  _combine_reducers.c  _combine_reducers.pyi  _combine_reducers.pyx  _combine_reducers_py.py  _store_core.c  _store_core.pyi  _store_core.pyx  autorun.py  basic_types.py  combine_reducers.py  main.py  py.typed  serialization_mixin.py  side_effect_runner.py  test.py  utils.py  with_state.py
redux_pytest/: __init__.py  plugin.py
redux_pytest/fixtures/: __init__.py  event_loop.py  monitor.py  snapshot.py  store.py  wait_for.py
scripts/: transpile.py
tests/: conftest.py  test_async.py  test_autorun.py  test_combinations.py  test_custom_autorun.py  test_features.py  test_middleware.py  test_monitor_fixtures.py  test_performance.py  test_scheduler.py  test_serialization.py  test_snapshot.py  test_snapshot_fixture.py  test_subscribe.py  test_todo.py  test_views.py  test_wait_for_fixture.py  test_weakref.py  test_with_state.py
tests/results/: store:test_general-000.json  store:test_general-002.json  store:test_general-005.json  store:test_general-007.json  store:test_general-009.json  store:test_general-012.json  store:test_todo-000.json  store:test_todo-001.json
tests/results/test_autorun/callability/: store-001.jsonc
tests/results/test_autorun/general/: store-000.jsonc  store-002.jsonc  store-003.jsonc  store:000.jsonc
tests/results/test_autorun/subscription/: store-002.jsonc  store-003.jsonc  store:002.jsonc
tests/results/test_autorun/value_property/: store:001.jsonc  store:003.jsonc
tests/results/test_autorun/with_comparator/: store-002.jsonc
tests/results/test_autorun/with_comparator_and_old_value/: store-000.jsonc  store-002.jsonc  store:002.jsonc
tests/results/test_autorun/with_old_value/: store-001.jsonc
tests/results/test_features/general/: store-000.jsonc  store-001.jsonc  store-002.jsonc  store-003.jsonc  store-004.jsonc  store-005.jsonc  store-autorun-000.jsonc  store-autorun-001.jsonc  store-autorun-002.jsonc  store-autorun-003.jsonc  store-autorun-004.jsonc  store-autorun_subscription-000.jsonc  store-autorun_subscription-001.jsonc  store-autorun_subscription-002.jsonc  store-autorun_subscription-003.jsonc  store-autorun_subscription-004.jsonc  store-initialization-000.jsonc  store-subscription-000.jsonc  store-subscription-001.jsonc  store-subscription-002.jsonc  store-subscription-003.jsonc  store-subscription-004.jsonc  store-subscription-005.jsonc  store-subscription-006.jsonc  store-subscription-007.jsonc  store:000.jsonc  store:001.jsonc  store:002.jsonc  store:003.jsonc  store:004.jsonc  store:005.jsonc  store:autorun-000.jsonc  store:autorun-001.jsonc  store:autorun-002.jsonc  store:autorun-003.jsonc  store:autorun-004.jsonc  store:autorun:000.jsonc  store:autorun:001.jsonc  store:autorun:002.jsonc  store:autorun:003.jsonc  (+27 more)
tests/results/test_snapshot_fixture/monitor/: store-000.jsonc  store-001.jsonc  store-002.jsonc  store-003.jsonc  store-004.jsonc
tests/results/test_snapshot_fixture/prefix/: store-custom_prefix-000.jsonc  store-custom_prefix-001.jsonc
tests/results/test_todo/todo/: store-000.jsonc  store-001.jsonc  store:000.jsonc  store:001.jsonc  store:002.jsonc
tests/results/test_weakref/autorun_method/: store:autorun_method_with_keep_ref-000.jsonc  store:autorun_method_with_keep_ref:000.jsonc
tests/results/test_weakref/autorun_method_subscription/: store-autorun_method_with_keep_ref-000.jsonc  store-autorun_method_with_keep_ref-001.jsonc  store:autorun_method_with_keep_ref-001.jsonc  store:autorun_method_with_keep_ref:001.jsonc
tests/results/test_weakref/autorun_subscription/: store-autorun_subscription-000.jsonc  store-autorun_subscription-001.jsonc  store:autorun_subscription-000.jsonc  store:autorun_subscription-001.jsonc  store:autorun_subscription:000.jsonc  store:autorun_subscription:001.jsonc
tests/results/test_weakref/event_subscription_method/: store-event_subscription_method_with_keep_ref-000.jsonc  store:event_subscription_method_with_keep_ref-000.jsonc  store:event_subscription_method_with_keep_ref:000.jsonc
tests/results/test_weakref/subscription/: store-000.jsonc  store:000.jsonc
tests/results/test_weakref/subscription_method/: store-subscription_method_with_keep_ref-000.jsonc  store-subscription_method_with_keep_ref-001.jsonc  store:subscription_method_with_keep_ref-000.jsonc  store:subscription_method_with_keep_ref-001.jsonc  store:subscription_method_with_keep_ref:000.jsonc  store:subscription_method_with_keep_ref:001.jsonc
