[project]
name = "python-redux"
dynamic = ["version"]
description = "Redux implementation for Python"
license = { text = "Apache-2.0" }
authors = [{ name = "Sassan Haradji", email = "me@sassanh.com" }]
maintainers = [{ name = "Sassan Haradji", email = "me@sassanh.com" }]
readme = "README.md"
requires-python = ">=3.11"
keywords = ['python', 'store', 'redux', 'reactive', 'autorun', 'view']
dependencies = ["python-immutable >= 1.1.1", "python-strtobool >= 1.0.0"]

[tool.uv]
dev-dependencies = [
  "poethepoet >= 0.24.4",
  "pyright >= 1.1.399",
  "ruff >= 0.11.0",
  "pytest >= 8.1.1",
  "pytest-cov >= 4.1.0",
  "pytest-timeout >= 2.3.1",
  "pytest-mock >= 3.14.0",
  "tenacity >= 8.2.3",
]

[project.urls]
homepage = 'https://github.com/sassanh/python-redux/'
repository = 'https://github.com/sassanh/python-redux/'
documentation = 'https://github.com/sassanh/python-redux/'
changelog = 'https://github.com/sassanh/python-redux/blob/main/CHANGELOG.md'

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "redux/_version.py"

[tool.hatch.version.raw-options]
local_scheme = "setup_scm_schemes:local_scheme"

[tool.hatch.build]
packages = ["redux", "redux_pytest"]

[tool.hatch.build.targets.sdist]
packages = ["redux", "redux_pytest"]

[project.scripts]
demo = "demo:main"
todo_demo = "todo_demo:main"

[tool.poe.tasks]
lint = "ruff check . --unsafe-fixes"
typecheck = "pyright -p pyproject.toml ."
test = "pytest --cov --cov-report=term-missing --cov-report=html --cov-report=xml"
sanity = ["typecheck", "lint", "test"]

[tool.ruff]
target-version = 'py311'

[tool.ruff.lint]
select = ['ALL']
ignore = ['INP001', 'PLR0911', 'D203', 'D213']
fixable = ['ALL']
unfixable = []

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"
multiline-quotes = "double"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLR0915", "PLR2004"]

[tool.ruff.format]
quote-style = 'single'

[tool.isort]
profile = "black"

[tool.pyright]
exclude = ['typings', '.venv']
filterwarnings = 'error'

[tool.pytest.ini_options]
log_cli = true
log_cli_level = 'ERROR'
timeout = 1

[tool.coverage.report]
exclude_also = ["if TYPE_CHECKING:"]

[tool.coverage.run]
source = ['redux', 'redux_pytest']
omit = ['redux_pytest/plugin.py', 'redux/_version.py', "setup_scm_schemes.py"]

[project.entry-points.pytest11]
redux = "redux_pytest.plugin"
