[project]
name = "python-redux"
dynamic = ["version"]
description = "Redux implementation for Python"
license = { text = "Apache-2.0" }
authors = [{ name = "Sassan Haradji", email = "me@sassanh.com" }]
maintainers = [{ name = "Sassan Haradji", email = "me@sassanh.com" }]
readme = "README.md"
requires-python = ">=3.11"
keywords = ['python', 'store', 'redux', 'reactive', 'autorun', 'view']
dependencies = ["python-immutable >= 1.1.1", "python-strtobool >= 1.0.0"]
classifiers = [
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3 :: Only",
]

[dependency-groups]
dev = [
  "hatch-vcs >= 0.5.0",
  "poethepoet >= 0.24.4",
  "pytest >= 8.1.1",
  "pytest-cov >= 4.1.0",
  "pytest-mock >= 3.14.0",
  "pytest-timeout >= 2.3.1",
  "ruff >= 0.14.8",
  "tenacity >= 8.2.3",
  "cython >= 3.0.0",
  "setuptools >= 68.0.0",
  "pyright>=1.1.407",
]

[project.urls]
homepage = 'https://github.com/sassanh/python-redux/'
repository = 'https://github.com/sassanh/python-redux/'
documentation = 'https://github.com/sassanh/python-redux/'
changelog = 'https://github.com/sassanh/python-redux/blob/main/CHANGELOG.md'

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "code"
path = "version.py"
expression = "get_version()"

[tool.hatch.build.hooks.vcs]
version-file = "redux/_version.py"

[tool.hatch.build]
packages = ["redux", "redux_pytest"]

[tool.hatch.build.targets.sdist]
packages = ["redux", "redux_pytest"]

[project.scripts]
demo = "demo:main"
todo_demo = "todo_demo:main"

[tool.poe.tasks]
lint = "ruff check . --unsafe-fixes"
transpile = "python scripts/transpile.py"
typecheck = "pyright -p pyproject.toml ."
test = "pytest --cov --cov-report=term-missing --cov-report=html --cov-report=xml"
sanity = ["typecheck", "lint", "test"]

[tool.ruff]
target-version = 'py311'

[tool.ruff.lint]
select = ['ALL']
ignore = ['INP001', 'PLR0911', 'D203', 'D213']
fixable = ['ALL']
unfixable = []

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"
multiline-quotes = "double"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLR0915", "PLR2004", "PLC0415"]
"redux_pytest/*" = ["PLC0415"]

[tool.ruff.format]
quote-style = 'single'

[tool.isort]
profile = "black"

[tool.pyright]
exclude = ['typings', '.venv']

[tool.pytest.ini_options]
log_cli = true
log_cli_level = 'ERROR'
timeout = 1

[tool.coverage.report]
exclude_also = ["if TYPE_CHECKING:"]

[tool.coverage.run]
source = ['redux', 'redux_pytest']
omit = ['redux_pytest/plugin.py', 'redux/_version.py', "setup_scm_schemes.py"]

[project.entry-points.pytest11]
redux = "redux_pytest.plugin"
